--- a/kanban-web-app/package.json
+++ b/kanban-web-app/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
