--- a/kanban-web-app/server/package.json
+++ b/kanban-web-app/server/package.json
@@ -16,12 +16,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
+    "mongoose": "^6.0.12",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.7",
     "@types/webpack-env": "^1.16.3",
     "nodemon": "^2.0.15",
