--- a/kanban-web-app/client/package.json
+++ b/kanban-web-app/client/package.json
@@ -12,12 +12,14 @@
     "bootstrap": "^5.1.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "jsonwebtoken": "^8.5.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vuedraggable": "^2.24.3",
     "vuelidate": "^0.7.6"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/vuelidate": "^0.7.15",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
