--- a/kanban-web-app/server/tsconfig.json
+++ b/kanban-web-app/server/tsconfig.json
@@ -15,6 +15,7 @@
       "typeRoots": [ "node_modules/@types/" ],
       "types": [
         "webpack-env",
+        "jest"
       ],
       "paths": {
         "@/*": [
